From 70be752 (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function minkowski_dot() with docstring

In ClosureInvariants/tests/conftest.py,

(*) Add pytest fixture for minkowski_dot_products

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) Add test_minkowski_dot_products()

From bc4770f (main):
===================

(*) Add .gitignore to repository

From ac2f0c0 (main):
===================

(*) Move changes.txt to the parent folder
(*) Move LICENSE.md to the parent folder
(*) Move README.rst to the parent folder

From empty (main):
=================

(*) Initial commit of repository